fix: adjust font size for better readability and add responsive font size for mobile

--- a/src/assets/scss/typography.scss
+++ b/src/assets/scss/typography.scss
@@ -15,7 +15,7 @@
 
 html {
   /* stylelint-disable property-no-vendor-prefix */
-  font-size: clamp(14px, calc(0.9rem + 0.6vw), 16px);
+  font-size: clamp(14px, calc(0.9rem + 0.6vw), 15px);
   line-height: 1.4;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -39,5 +39,11 @@ textarea {
 @include responsive.l {
   html {
     font-size: clamp(14px, calc(1rem + 0.8vw), 18px);
+  }
+}
+
+@include responsive.mobile {
+  html {
+    font-size: clamp(14px, calc(1rem + 0.8vw), 16px);
   }
 }
